--- a/index.html
+++ b/index.html
@@ -9,21 +9,65 @@
   </head>
   <body>
     <main>
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+ul {
+  list-style-type: none;  
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+</style>
+</head>
+<body>
+
+<ul>
+  <li><a href="#home">HOME</a></li>
+  <li><a href="work experience.html">WORK EXPERIENCE</a></li>
+  <li><a href="#contact">CONTACT ME</a></li>
+</ul>
+
+</body>
+</html>
+
+
+
       <!-- ***************  ABOUT / PROFILE  **************** -->
       <header>
-        <div class="content-wrap">
+        <div id="home" class="content-wrap">
           <h1>Christina Truong</h1>
-          <h2>Tech Educator + Front-end Developer</h2>
+          <h2>Tech Educator + Front-end Developer &#128126;</h2>
 
           <p>As a developer, I specialize in creating modular and scalable front-end architectures. As an educator, I focus on creating inclusive learning environments, instructor training and curriculum development.</p>
           <p>I’m also exploring more creative pursuits designing tee shirts and accessories for <a href="http://teethang.com" target="_blank">Nuthin’ But a Tee Thang</a>, an online store I’m running with my husband.</p>
+          <a class="btn" href="file:///Users/michelehuynh/Documents/GitHub/css-basic-challenge-michelehuynh/index.html" target="_blank">See my work experience</a>
         </div>
       </header>
 
       <!-- ************ PROJECTS / PORTFOLIO  ************** -->
       <section class="projects">
         <div class="content-wrap divider">
-          <h2>Featured Projects</h2>
+          <h2>Featured Projects &#128421;</h2>
           <p>View selected projects below. More information can be found at <a href="http://christinatruong.com">christinatruong.com</a>.</p>
 
           <!-- Project 1 -->
@@ -53,74 +97,10 @@
         </div>
       </section>
 
-      <!-- ****************  WORK EXPERIENCE  ******************** -->
-      <section class="work-experience">
-        <div class="content-wrap item-details divider">
-          <h2>Work Experience</h2>
-          <p>See my complete work history on <a href="https://www.linkedin.com/in/christinatruong/">LinkedIn</a>.</p>
-
-          <!-- Job 1 -->
-          <section class="job-item">
-            <div class="job-details">
-              <h3>Front-end Developer & Educator</h3>
-              <p>Freelance</p>
-              <p>July 2006-Present</p>
-            </div>
-            <div class="job-summary">
-              <p>Provides various front-end related services ranging from development work, speaking engagements, instructor training, workshops, and curriculum development. See more at  <a href="http://christinatruong.com">christinatruong.com</a>.</p>
-            </div>
-          </section>
-
-          <!-- Job 2 -->
-          <section class="job-item">
-            <div class="job-details">
-              <h3>Director of Curriculum</h3>
-              <p>Ladies Learning Code</p>
-              <p>July 2014 - February 2016</p>
-            </div>
-            <div class="job-summary">
-              <p>Managed all curriculum for the adult programs. Created teaching materials and implemented instructor training across 20+ Canadian chapters.</p>
-              <p>Key contributions:</p>
-              <ul>
-                <li>Overhauled the curriculum and standardized the content and delivery.
-                  <ul>
-                    <li>Created 9 new workshops focusing on HTML, CSS, JavaScript, jQuery, Wordpress and Responsive Web Design.</li>
-                    <li>Created all Hackapalooza content (2 day conference style event) consisting of 2-4 hour workshop sessions.</li>
-                    <li>Created interactive slide deck template for consistent national workshop branding.</li>
-                    <li>Developed the Digital Skills part-time program curriculum.</li>
-                  </ul>
-                </li>
-                <li>Provided training for all instructors focusing on creating an inclusive and engaging learning environment.</li>
-                <li>Maintained the ladieslearningcode.com website.</li>
-                <li>Volunteer lead instructor from 2011-2014 for Toronto workshops and several chapter launches.</li>
-              </ul>
-            </div>
-          </section>
-
-          <!-- Job 3 -->
-          <section class="job-item">
-            <div class="job-details">
-              <h3>Lead Front-End Developer</h3>
-              <p>Field iD</p>
-              <p>March 2013 - February 2014</p>
-            </div>
-            <div class="job-summary">
-              <p>Lead the front-end development for the in-house safety inspection software.</p>
-              <p>Key contributions:</p>
-              <ul>
-                <li>Responsible for setting code standards for the front-end development.</li>
-                <li>Created a fully customized front-end framework, including the UI/UX design.</li>
-                <li>Standardized the site architecture and design.</li>
-              </ul>
-            </div>
-          </section>
-        </div>
-      </section>
-
       <!-- *************  EDUCATION & CERTIFICATIONS *********** -->
       <section class="education">
         <div class="content-wrap item-details">
-          <h2>Education</h2>
+          <h2>Education &#127891;</h2>
 
           <section>
             <h3>Seneca College - Toronto, ON</h3>
@@ -143,8 +123,8 @@
 
       <!-- ************  CONTACT INFO / SOCIAL MEDIA  ************ -->
       <footer>
-        <div class="content-wrap">
-          <h2>Let's Keep in Touch!</h2>
+        <div id="contact" class="content-wrap">
+          <h2>Let's Keep in Touch! &#128483;</h2>
 
           <!-- Social media and contact links. Add or remove any networks. -->
           <ul class="contact-list">
