--- a/index.html
+++ b/index.html
@@ -10,48 +10,11 @@
   <body>
     <main>
 
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-ul {
-  list-style-type: none;  
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111;
-}
-</style>
-</head>
-<body>
-
-<ul>
-  <li><a href="#home">HOME</a></li>
-  <li><a href="work experience.html">WORK EXPERIENCE</a></li>
-  <li><a href="#contact">CONTACT ME</a></li>
-</ul>
-
-</body>
-</html>
-
-
-
+      <nav>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="work experience.html">WORK EXPERIENCE</a></li>
+        <li><a href="#contact">CONTACT ME</a></li>
+      </nav>
       <!-- ***************  ABOUT / PROFILE  **************** -->
       <header>
         <div id="home" class="content-wrap">
@@ -117,6 +80,37 @@ li a:hover {
           <section>
             <h3>San Jose State University - San Jose, CA</h3>
             <p>General Studies, 2000</p>
+          </section>
+        </div>
+      </section>
+
+      <!-- ************* MY HOBBIES *********** -->
+      <section class="hobbies">
+        <div class="content-wrap item-details">
+          <h2>My Hobbies &#128076;</h2>
+          <section class="gallery">
+
+          <div class="column">
+           <h3>Yoga</h3>
+           <a target="_blank" href="images/yoga.jpg">
+             <img src="images/yoga.jpg" alt="Forest">
+           </a>
+          </div>
+
+          <div class="column">
+           <h3>Snowboard</h3>
+           <a target="_blank" href="images/snowboard.jpg">
+             <img src="images/snowboard.jpg" alt="Forest">
+           </a>
+          </div>
+
+          <div class="column">
+           <h3>Running</h3>
+           <a target="_blank" href="images/running.jpg">
+             <img src="images/running.jpg" alt="Forest">
+           </a>
+          </div>
+
           </section>
         </div>
       </section>
